samples/_failures_safe/1761727330_c1ba4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94675a65.c: In function ‘main’:
./samples/SAFE/__tmp_94675a65.c:153:5: error: expected declaration or statement at end of input
  153 |     }
      |     ^
